fix travis build.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "name": "Sam Saint-Pettersen",
     "email": "s.stpettersen+github@gmail.com"
   },
+  "engines": {
+    "node": ">=0.10.0"
+  },
   "scripts": {
     "test": "gulp test"
   },
