--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-nodeunit-runner": "^0.2.2",
+    "gulp-rename": "^1.2.2",
+    "gulp-rimraf": "^0.2.0",
     "gulp-sequence": "^0.4.5",
     "gulp-standard": "^7.0.1",
     "gulp-wait": "0.0.2"
